--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,7 @@
+name = "Cosmo_et_al_coevo_polymorphism"
+authors = ["Leandro G. Cosmo, Paulo R. Guimaraes, Jordi Bascompte"]
+[compat]
+julia = "1.10.4"
+DrWatson = "2.15.0"
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
